--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
-title: Long Haul
-description: Long Form Jekyll theme built with SASS / COMPASS / SUSY
+title: SuziLog
+description: Upload projects
 
 url: http://brianmaierjr.github.com/long-haul
 baseurl: /
@@ -20,9 +20,7 @@ navigation:
    url: /contact
 
 social:
-   github: brianmaierjr
-   twitter: brianmaierjr
-   facebook: brianmaierjr
-   email: brimaidesigns@gmail.com
+   github: suzishin
+   email: suzi619@naver.com
 
 google_analytics: "UA-58263416-1"
